fix html errors

--- a/reports/index.html
+++ b/reports/index.html
@@ -524,12 +524,12 @@ What types of scripts are you using for local customization? bash, cfengine (and
   <a href="https://www.aei.mpg.de/96456/20_Computer_Clusters">Some info about the clusters</a>
 
   Former cluster called <a href="https://hypatia.aei.mpg.de/images/Merlin/">Merlin</a>
-  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"><img height="250"
-  src="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"></a>  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"><img height="250"
-  src="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"</a> <a href="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"><img height="250" src="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"></a>
+  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"> <img alt="merlin1" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"></a>
+  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"> <img alt="merlin2" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"></a>
+  <a href="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"> <img alt="merlin3" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"></a>
 
-<p>Old Alpha cluster in 2003
- <a href="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"><img height="250" src="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"></a>
+Old Alpha cluster in 2003
+ <a href="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"><img alt="merlin4" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"></a>
 
    See also the <a href="https://fai-project.org/reports/index.html#atlas">ATLAS cluster</a>
 </pre> <HR>
@@ -2148,7 +2148,7 @@ How many files do you have in ../config/files? 593
 What types of scripts are you using for local customization? shell
 
 <b>What is the business of your company/organisation?</b> <a href="http://www.switch.ch">SWITCH</a>
-<p>   internet services for the Swiss universities, registry for domain names ending in .ch and .li
+   internet services for the Swiss universities, registry for domain names ending in .ch and .li
 <br><b>Additional comments:</b>
 number of indirectly installed systems is not included above (VMs
 based on templates that in turn are made with fai) (maybe 200).
@@ -2309,7 +2309,7 @@ even more software packages, and many more licensing and security issues...
 </pre> <HR>
 
 
-<b>From:</b> Denny Schierz, linuxmail  <four>lin <dot>net
+<b>From:</b> Denny Schierz, linuxmail  &lt;four&gt;lin dot=net
 <br><b>Date:</b> Wed, 11 Jul 2012 11:23:56 +0200
 
 <pre>
@@ -2662,7 +2662,7 @@ How do you boot your hosts? PXE/DHCP
 Does the default install kernel recognize all your hardware? Yes.
 
 Do you manage your configuration space under version control? Yes
-How big is your config space (Mbytes, # of files)? < 1MB
+How big is your config space (Mbytes, # of files)? &lt; 1MB
 How many files do you have in ../config/files? 47
 What types of scripts are you using for local customization? Shell
 
@@ -3039,7 +3039,7 @@ Does the default install kernel recognize all your hardware?
 Which drivers are missing? Usually WiFi, sometimes SATA or GigE.
 
 Do you manage your configuration space under version control? Yes, SVN.
-How big is your config space (Mbytes, # of files)? A couple MB, < 100 files
+How big is your config space (Mbytes, # of files)? A couple MB, &lt; 100 files
 How many files do you have in ../config/files? Not much.
         The bulk of the configuration is managed through
         configurationpackages. Software selection is managed through a
@@ -3795,7 +3795,7 @@ method to be very robust and efficient.
 
 I am currently investigating the usage of FAI to build Ubuntu clients,
 with good success so far. We currently manually install Ubuntu
-clients, though the number of these hosts is currently <20 test
+clients, though the number of these hosts is currently &lt;20 test
 machines. (http://www.sourcecode.de/content/ubuntu-910-and-fai)
 
 Update: Mon, 16 Aug 2010 14:17:02 -0400 (EDT)
@@ -6179,7 +6179,7 @@ never had to regret.
 <br><b>Date:</b> Tue, 6 Mar 2007 14:30:55 +0100
 <pre>
 How many hosts have you installed using fai? <b>80</b> at one school and <b>100</b> at another school
-</b>
+
 Which version of fai are you using? since two years always the newest. Currently <b>3.1.7</b>
 Which version of fai-kernels are you using? kernel 2.6 from fai-kernels
 
@@ -6686,9 +6686,9 @@ Plan for next year:
  - append 4 new classroom (about 60 computers)
  - conversion some clusters at META Centrum (meta.cesnet.cz) from systemimager to FAI
 
- <a href=http://home.zcu.cz/~svamberg/index.php?name=projects&page=FAI>Documentation about FAI instalation at University of West Bohemia</a>. It's only in Czech language.
+ <a href="http://home.zcu.cz/~svamberg/index.php?name=projects&page=FAI">Documentation about FAI instalation at University of West Bohemia</a>. It's only in Czech language.
 
-Do you have some nice pictures of your installation? <a href=http://bodik.nawebu.info/pmwiki/pmwiki.php?n=Civ.Uu406Install>Public lab</a> <a href=http://bodik.nawebu.info/pmwiki/pmwiki.php?n=Civ.HjInstall>Yet another FAIwork</a> <a href=http://home.zcu.cz/~svamberg/fai/foto/>Big pics</a>
+Do you have some nice pictures of your installation? <a href="http://bodik.nawebu.info/pmwiki/pmwiki.php?n=Civ.Uu406Install">Public lab</a> <a href="http://bodik.nawebu.info/pmwiki/pmwiki.php?n=Civ.HjInstall">Yet another FAIwork</a> <a href=http://home.zcu.cz/~svamberg/fai/foto/>Big pics</a>
 </pre> <hr>
 
 
@@ -7991,7 +7991,7 @@ repositories, none of them is on the FAI machine.
 <b>From:</b> Mathew A. Chrystal, matt =at chrystal-2.science.nd.edu
 <br><b>Date:</b> Wed, 13 Apr 2005 11:12:25 -0500
 <pre>
-How many hosts have you installed using fai? <a>approximately 70</b> machines have been installed
+How many hosts have you installed using fai? <b>approximately 70</b> machines have been installed
 Which version of fai are you using? <b>2.6.3</b>
    at the present time i am using 2.6.3. i had upgraded to 2.6.6 but
    was having some problems with the install being unable to resolve
@@ -8011,7 +8011,7 @@ Does the default kernel recognize all your hardware?
 <br><b>Additional comments:</b>
 mass installations of user computers and beowulf style clusters.
 
-I have written a paper for <a href=http://www.giac.org/certified_professionals/practicals/gsec/3937.php>secure installations using debian</a> and fai for a recent sans (GSEC) certification.
+I have written a paper for <a href="http://www.giac.org/certified_professionals/practicals/gsec/3937.php">secure installations using debian</a> and fai for a recent sans (GSEC) certification.
 </pre> <hr>
 
 
@@ -8281,7 +8281,7 @@ Central FAI Server serving a dedicated installation network at 3 locations in Ge
 <br><b>Date:</b> Fri, 11 Feb 2005 17:51:40 +0100
 <pre>
 How many hosts have you installed using fai? <b>3 Opteron Systems</b> (planned 40 Sun VX0z Machines), <b>5 Laptops, 5 Desktop Systems</b>
-Which version of fai are you using? <b>2.5.5BETA</b> for the Opteron systems, <b>2.6.6</b> for the others</b>
+Which version of fai are you using? <b>2.5.5BETA</b> for the Opteron systems, <b>2.6.6</b> for the others
 Which version of fai-kernels are you using?
    For the Desktop using custom build kernel 2.6
    For the opterons a costom 2.4.27-om (openmosix) Kernel, derived from the clusterknoppix CDROM
@@ -9398,8 +9398,7 @@ Psych. Dept., Rutgers-Newark, ravana.rutgers.edu
  cfengine2
 
 <a href=http://www.rumba.rutgers.edu/ravana.php>Cluster web page</a>
-<a
-href=http://onerussian.com/php/album.php?page=/Photos/Me2003/100803OPT/>
+<a href="http://onerussian.com/php/album.php?page=/Photos/Me2003/100803OPT/">
 Pictures of the cluster</a>
 </pre> <hr>
 
@@ -10068,7 +10067,7 @@ Evolution at the Marine Biological Laboratory
 workstations up and running (starting with an empty room) in the space
 of about a day--thanks much for some excellent software.
 </pre><hr>
-<b>From:</b> Philipp Grau <PHGRAU@ZEDAT.FU-BERLIN.DE>
+<b>From:</b> Philipp Grau PHGRAU ZEDAT dot FU-BERLIN.DE
 <br><b>Date:</b> Mon, 14 Jul 2003 14:21:39 +0200
 <pre>
 How many hosts have you installed using fai?
@@ -10085,7 +10084,7 @@ Do you use bootp or dhcp? dhcp
 Does the default kernel recognize all your hardware? Yes
      Which drivers are missing: none
 </pre><hr>
-<b>From:</b> Joshua Moore <J.MOORE@DKFZ-HEIDELBERG.DE>
+<b>From:</b> Joshua Moore J.MOORE @ DKFZ-HEIDELBERG dot=DE
 <br><b>Date:</b> Fri, 27 Jun 2003 16:55:28 +0200
 <pre>
 How many hosts have you installed using fai? <b>4 currently</b>. The final
@@ -10115,7 +10114,7 @@ shouldn't be expected to go through such lengths.
 Nevertheless, I would be very interested in your work for solaris. We
 also have +20 Solaris machines, which I could possible tie into the one cluster.
 </pre><hr>
-<b>From:</b> Francois CONTAT <FRANCOIS.CONTAT@FR.TISCALI.COM>
+<b>From:</b> Francois CONTAT FRANCOIS dot=CONTAT ==FR.TISCALI.COM
 <br><b>Date:</b> Tue, 24 Jun 2003 12:02:45 +0200
 <pre>
 How many hosts have you installed using fai? pratically<b> 1</b> for
@@ -10138,7 +10137,7 @@ be corrected.
 
 Really thank you for this work.
 </pre><hr>
-<b>From:</b> Stephane FRITSCH <STEPHANE.FRITSCH@RTE-FRANCE.COM>
+<b>From:</b> Stephane FRITSCH STEPHANE dot FRITSCH AT @RTE-FRANCE.COM
 <br><b>Date:</b> Mon, 23 Jun 2003 12:03:13 +0100
 <pre>
 How many hosts have you installed using fai?
@@ -10203,7 +10202,7 @@ project (the Nautibus - computer science area - plans
 to use FAI in a close future), even if i spent hours
 on errors (Linux newbies are newbies :D)
 </pre><hr>
-<b>From:</b> Susan G. Kleinmann <SGK@KLEINMANN.COM>
+<b>From:</b> Susan G. Kleinmann SGK@@KLEINMANN dot=COM
 <br><b>Date:</b> Thu, 24 Jan 2002 12:14:23 -0500
 <pre>
 How many host have you installed using fai ? <b>None</b>
