fix image sizes

--- a/reports/index.html
+++ b/reports/index.html
@@ -52,7 +52,7 @@ What types of scripts are you using for local customization? shell - bash
 <b>What is the business of your company/organisation?</b> Home NAS to gain some digital sovereignty.
 <br><b>Additional comments:</b>
 The USB installation stick is mainly for disaster recovery of my openmediavault Home NAS, but also to help others get started.
- <a href="pictures/hp-nas.png"><img alt="HP NAS" src="pictures/hp-nas.png" width="50%"></a>
+ <a href="pictures/hp-nas.png"><img alt="HP NAS" src="pictures/hp-nas.png" width=600></a>
 </pre> <HR>
 
 
@@ -524,12 +524,12 @@ What types of scripts are you using for local customization? bash, cfengine (and
   <a href="https://www.aei.mpg.de/96456/20_Computer_Clusters">Some info about the clusters</a>
 
   Former cluster called <a href="https://hypatia.aei.mpg.de/images/Merlin/">Merlin</a>
-  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"> <img alt="merlin1" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"></a>
-  <a href="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"> <img alt="merlin2" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"></a>
-  <a href="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"> <img alt="merlin3" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"></a>
+<a href="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"> <img alt="merlin1" width="600" src="https://hypatia.aei.mpg.de/images/Merlin/02150006.JPG"></a>
+<a href="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"> <img alt="merlin2" width="600" src="https://hypatia.aei.mpg.de/images/Merlin/02150007.JPG"></a>
+<a href="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"> <img alt="merlin3" width="600" src="https://hypatia.aei.mpg.de/images/Merlin/IMG_1214.JPG"></a>
 
 Old Alpha cluster in 2003
- <a href="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"><img alt="merlin4" height="250" src="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"></a>
+ <a href="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"><img alt="merlin4" height="600" src="https://hypatia.aei.mpg.de/images/Merlin/dsc01622.jpg"></a>
 
    See also the <a href="https://fai-project.org/reports/index.html#atlas">ATLAS cluster</a>
 </pre> <HR>
@@ -1291,7 +1291,7 @@ Additional scripts which extend FAI <a href="https://www.matteoguglielmi.net/ufb
 
 Pictures of the SuperB Cluster Confederation
 
-<a href="pictures/epfl/superB-002.jpg"><img alt="superB" src="pictures/epfl/superB-002-small.jpg" width="20%"  ></a> <a href="pictures/epfl/superB-003.jpg"><img alt="superB" src="pictures/epfl/superB-003-small.jpg" width="20%"  ></a> <a href="pictures/epfl/superB-004.jpg"><img alt="superB" src="pictures/epfl/superB-004-small.jpg" width="20%"  ></a> <a href="pictures/epfl/superB-005.jpg"><img alt="superB" src="pictures/epfl/superB-005-small.jpg" width="20%"  ></a> <a href="pictures/epfl/superB-006.jpg"><img alt="superB" src="pictures/epfl/superB-006-small.jpg" width="20%"  ></a>
+<a href="pictures/epfl/superB-002.jpg"><img alt="superB" src="pictures/epfl/superB-002-small.jpg" width="600"  ></a> <a href="pictures/epfl/superB-003.jpg"><img alt="superB" src="pictures/epfl/superB-003-small.jpg" width="600"  ></a> <a href="pictures/epfl/superB-004.jpg"><img alt="superB" src="pictures/epfl/superB-004-small.jpg" width="600"  ></a> <a href="pictures/epfl/superB-005.jpg"><img alt="superB" src="pictures/epfl/superB-005-small.jpg" width="600"  ></a> <a href="pictures/epfl/superB-006.jpg"><img alt="superB" src="pictures/epfl/superB-006-small.jpg" width="500"  ></a>
 </pre> <HR>
 
 
@@ -1360,7 +1360,7 @@ FAI is used to partition and lay down a base operating system, then cfg mgmt tak
 love that it's flexible enough to do chroot/dirinstalls for our
 ganeti-managed kvms.  nice to have a single installer for both.
 
-<a href="pictures/brewster-Internet-archive-petabox-2011-ver2.jpg"><img alt="petabox1" src="pictures/brewster-Internet-archive-petabox-2011-ver2-small.jpg" width="40%"  ></a> <a href="pictures/petabox.jpg"><img alt="petabox" src="pictures/petabox.jpg" width="40%"  ></a>
+<a href="pictures/brewster-Internet-archive-petabox-2011-ver2.jpg"><img alt="petabox1" src="pictures/brewster-Internet-archive-petabox-2011-ver2-small.jpg" width="500"  ></a> <a href="pictures/petabox.jpg"><img alt="petabox" src="pictures/petabox.jpg" width="500"  ></a>
 </pre> <HR>
 
 
@@ -1513,7 +1513,7 @@ What types of scripts are you using for local customization? shell, puppet
 <br><b>Additional comments:</b>
 We are deploying all kind of linux-servers using fai for many years
 Our PXE menu:
-<a href="pictures/fai_screeny.jpg"><img alt="pxe menu" src="pictures/fai_screeny.jpg" width="40%"  ></a>
+<a href="pictures/fai_screeny.jpg"><img alt="pxe menu" src="pictures/fai_screeny.jpg" width="500"  ></a>
 </pre> <HR>
 
 
