--- a/cluster/index.html
+++ b/cluster/index.html
@@ -84,9 +84,9 @@ A Beowulf cluster called <a
 href=http://www.vision.ime.usp.br/~cage/Beowulf/>Biowulf/IME</a> with
 16 nodes of 1.2 GHz AMD Athlon used for bioinformatic applications.
 <li>
-Several <a href=http://cluster-team.is.titech.ac.jp/modules/incontent/index.php?op=aff&option=0&url=ClusterIntro.html>clusters</a>
+Several <a href="http://cluster-team.is.titech.ac.jp/modules/incontent/index.php?op=aff&option=0&url=ClusterIntro.html">clusters</a>
  at Matsulab of the Tokyo Institute of Technology are
-installed using <a href=http://lucie.sf.net>lucie</a>, which is a mixture of FAI
+installed using <a href="http://lucie.sf.net">lucie</a>, which is a mixture of FAI
 and some other tools like ganglia, nagios, dolly+ and others. Most FAI
 tasks are rewritten in ruby
 but have the same functionality. They installed following clusters with
@@ -94,7 +94,7 @@ lucie: Presto I, Presto II, Presto III, OBI Grid Cluster
 
 <li>
 <A href="https://www.sintef.no/globalassets/project/evitameeting/2001/building_notes.pdf">Notes</A> and
-<a href=https://www.sintef.no/globalassets/project/evitameeting/2001/building_foils.pdf>
+<a href="https://www.sintef.no/globalassets/project/evitameeting/2001/building_foils.pdf">
 foils</a> of building a Beowulf cluster from a winter school in 2001.
 </ul>
 
