fix html errors

--- a/contact/index.html
+++ b/contact/index.html
@@ -39,7 +39,7 @@
 <h3>Contact / Support</h3>
 
 <ul class="col s12 browser-default">
-<li> E-mail: <a href="mailto:fai (at) fai-project.org">fai no-spam @fai-project.org</a>
+<li> E-mail: <a href="mailto:fai_(at)_fai-project.org">fai_no-spam_@fai-project.org</a>
 for feedback, suggestions and comments
 <li> You can also talk to Mrfai on #fai on irc.debian.org
 <li> If you have any question, please use the mailing list
@@ -52,7 +52,7 @@ for feedback, suggestions and comments
 <ul class="col s12 browser-default">
 <li> Worldwide commercial support for FAI is available from the
 author himself. Have a look at <a href="http://fai-cluster.de">fai-cluster.de</a>. Send
-an <a href="mailto:ber=a=tun=g ==send=nospam@fai-cluster.de">email</a>.
+an <a href="mailto:ber=a=tun=g==nospam@fai-cluster.de">email</a>.
 <li> The author also gives <a href="http://www.linuxhotel.de/kurs/fai/">tutorials
 at Linuxhotel</a>.
 <li> There are also other companies that have know-how in FAI and can help
