--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -81,7 +81,7 @@
         The
         <a href="https://wiki.fai-project.org">FAI Wiki</a>
         has lots of more infos, some tips and tricks and scripts from other people, but is often not up-to-date. You have to request an account via
-        <a href="mailto:faiwikimgr XnospamX @fai-project.org">email</a>
+        <a href="mailto:faiwikimgr_XnospamX_@fai-project.org">email</a>
         or on IRC to edit or create new pages.
       </div>
     </div>
