--- a/header.html
+++ b/header.html
@@ -47,7 +47,7 @@
               <a href="/reports/">Case studies</a>
             </li>
             <li>
-              <a href="/mailinglist/">Mailing Lists / IRC / Wiki</a>
+              <a href="/mailinglist/">Mails / IRC / Wiki</a>
             </li>
             <li>
               <a href="/cluster/">Clusters built with FAI</a>
