--- a/header.html
+++ b/header.html
@@ -116,7 +116,7 @@
               <a href="/otherdocs/">Other documentation</a>
             </li>
             <li>
-              <a href="/talks/">Talk slides and videos</a>
+              <a href="/talks/">Talks / Slides / Videos</a>
             </li>
           </ul>
         </div>
