--- a/FAIme/status.html
+++ b/FAIme/status.html
@@ -1,28 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 
   <head>
-    <meta http-equiv="Refresh" content="43" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="Title" content="FAI.me - build you own customized installation image" />
+    <meta http-equiv="Refresh" content="43">
+
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
       <title>FAI.me - Your custom installation image</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
   </head>
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
+
+
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col s12">
+
+            <!--#include virtual="job.html" -->
+
+          </div>
+        </div>
       </div>
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!--#include virtual="job.html" -->
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+
+    </main>
+
+    <footer class="page-footer white">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
