--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="row valign-wrapper">
-          <div class="col s8">
+          <div class="col s7 m8">
             <h4>About FAI</h4>
             <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and virtual
               environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
