--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -32,7 +32,7 @@
 
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
