--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
