--- a/references/index.html
+++ b/references/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
