--- a/reports/index.html
+++ b/reports/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
