--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
