--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,7 +40,7 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own ISO or
+	      FAI.me. Build your own installation ISO or
 		a <a href="cloud">cloud image</a>
 	    </h5>
 	    <div class="divider"></div>
