--- a/download/index.html
+++ b/download/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <!--#include virtual="/header.html" -->
+      <!--#include virtual="/sidenav.html" -->
     </header>
     <main>
       <div class="container">
