make talks and video first entry, merge wiki and blog

--- a/guide/index.html
+++ b/guide/index.html
@@ -24,6 +24,31 @@
     </header>
     <main>
       <div class="container">
+
+        <div class="row">
+          <div class="col s12">
+            <h4>
+              <a href="/talks">Talks and Videos about FAI</a>
+            </h4>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12">
+            <h4>Wiki and Blog</h4>
+            <ul>
+              <li> &bullet;
+                <a href="https://wiki.fai-project.org">https://wiki.fai-project.org</a>
+              </li>
+              <li> &bullet;
+                <a href="https://blog.fai-project.org">https://blog.fai-project.org</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+
         <div class="row">
           <div class="col s12">
             <h4>FAI guide</h4>
@@ -71,37 +96,6 @@
                     <input type="submit" name="btnG" value="Search" class="btn grey">
                   </p>
                 </form>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12">
-            <h4>
-              <a href="/talks">Talks and Videos about FAI</a>
-            </h4>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12">
-            <h4>The FAI wiki</h4>
-            <ul>
-              <li>
-                &bullet;
-                <a href="https://wiki.fai-project.org">https://wiki.fai-project.org</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12">
-            <h4>A FAI blog</h4>
-            <ul>
-              <li>
-                <a href="https://blog.fai-project.org">https://blog.fai-project.org</a>
               </li>
             </ul>
           </div>
