remove top from html, it's defined in css

--- a/sidenav.html
+++ b/sidenav.html
@@ -22,7 +22,7 @@
   </nav>
 </div>
 
-<ul class="sidenav sidenav-fixed" id="sidenav" style="top: 75px">
+<ul class="sidenav sidenav-fixed" id="sidenav">
 
   <li>
     <ul class="collapsible">
