--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <!-- Orange header bar -->
         <div class="row">
           <div class="col s12 z-depth-3 center orange" style="margin-top: 10px">
-            <h6>
-              Motto: Plan your installation, and FAI installs your plan.</h6>
+            <h6>Motto: Plan your installation, and FAI installs your plan.</h6>
           </div>
         </div>
 
@@ -44,10 +43,8 @@
 
         <div class="row">
           <div class="col s12">
-            <h5>About
-              <a href="/FAIme">FAI.me</a>
-            </h5>
-            <p>FAI.me is a build service to create custom Debian disk images used on desktop, in virtual machines or on a cloud-computing platform.
+            <h5>About <a href="/FAIme">FAI.me</a> </h5>
+            <p>FAI.me is a build service to create custom installation images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
             </p>
 
           </div>
