--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
 
           <div class="col m4 hide-on-small-only">
 
-            <img class="valign responsive-img" src="pics/dist-logos-new.png" alt="">
+            <img class="valign responsive-img" src="pics/dist-logos.png" alt="">
 
           </div>
         </div>
