--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
-    <script src="/css/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <style>
       .middle-indicator {
         position: absolute;
