update to FAI 6.0

--- a/fai-cd/fai-cd-old.html
+++ b/fai-cd/fai-cd-old.html
@@ -24,18 +24,18 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-large_6.0.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO large (1.3GB)</a>
+              <a href="faicd64-large_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO large (1.2GB)</a>
             </div>
             <p class="col m7 s12">
-              The default image. Includes all packages for XFCE and GNOME but only the basefiles for Rocky Linux 9 and Ubuntu 22.04
+              The default image. Includes all packages for XFCE and GNOME but only the basefiles for CentOS 8 and Ubuntu 20.04
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-small_6.0.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO small (761MB)</a>
+              <a href="faicd64-small_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO small (674MB)</a>
             </div>
             <p class="col m7 s12">
               Only the XFCE packages are included. Other packages and basefiles are downloaded from the internet.
@@ -44,18 +44,18 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-ubuntu-only_6.0.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.6GB)</a>
+              <a href="faicd64-ubuntu-only_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.3GB)</a>
             </div>
             <p class="col m7 s12">
-              This image only installs Ubuntu 22.04 LTS. All packages are included.
+              This image only installs Ubuntu 20.04 LTS. All packages are included.
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-autodiscover_6.0.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>Autodiscover CD (46MB)</a>
+              <a href="faicd64-autodiscover_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>Autodiscover CD (38MB)</a>
             </div>
             <p class="col m7 s12">
               Boot only image which autodiscovers the FAI server.
@@ -63,7 +63,7 @@
           </div>
 
           <p class="col s12">
-            All installation images use Debian 12 aka bookworm, FAI 6.0, kernel 6.X, amd64 architecture,
+            All installation images use Debian 11 aka bullseye, FAI 5.10.3, kernel 5.10, amd64 architecture,
             <a href="sha256sums.asc">sha256sum.asc</a>
             of the ISO's. They can boot from CD/DVD or USB stick with legacy BIOS or UEFI.
           </p>
@@ -82,7 +82,7 @@
             You can write the ISO image onto a USB stick using the command dd(1) and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf):
 
 <pre><code>
-dd if=faicd64-large_6.0.iso of=/dev/sdx
+dd if=faicd64-large_5.10.3.iso of=/dev/sdx
 </code></pre>
 
           </div>
@@ -94,7 +94,7 @@ dd if=faicd64-large_6.0.iso of=/dev/sdx
             <ul>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>These installation images can install Debian 12 (XFCE and GNOME), Ubuntu 22.04 and Rocky Linux 9, without the need of an install server</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>These installation images can install Debian 10 (XFCE and GNOME), Ubuntu 20.04 and CentOS 8, without the need of an install server</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
