link to page with old images

--- a/fai-cd/fai-cd-old.html
+++ b/fai-cd/fai-cd-old.html
@@ -20,6 +20,7 @@
     <main>
       <div class="container">
         <div class="row">
+          <h2 class="col s12">OLD Images using FAI 5.10.3</h4>
           <h4 class="col s12">FAI CD: The Easy Way to Start With FAI</h4>
 
           <div class="col s12 m10 valign-wrapper">
