--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -147,6 +147,13 @@ dd if=faicd64-large_6.0.iso of=/dev/sdx
             <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col s12">
+            <h5><a href="fai-cd-old.html">Older ISO Images for FAI<a/></h5>
+          </div>
+        </div>
+
       </div>
     </main>
 
