add links, add blog

--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -76,7 +76,9 @@
 
       </div>
 
-      <h4>Wiki</h4>
+      <h4><a href="https://blog.fai-project.org">Blog</a></h4>
+
+      <h4><a href="https://wiki.fai-project.org">Wiki</a></h4>
       <div class="row">
         The
         <a href="https://wiki.fai-project.org">FAI Wiki</a>
