scale down thumb

--- a/poster/index.html
+++ b/poster/index.html
@@ -42,7 +42,7 @@
           <div class="col s12 m6">
             <a href="/poster/poster.pdf">
               <figure>
-                <img alt="poster thumb" src="poster-thumb.png">
+                <img alt="poster thumb" src="poster-thumb.png" height="450px">
                 <figcaption>FAI poster</figcaption>
               </figure>
             </a>
