--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -45,7 +45,8 @@
 	    </h5>
 	    <div class="divider"></div>
 	    <p>
-              This image will do an unattended installation of Debian and the selected applications. No network connection is needed, since all packages are on the installation media. You can burn this image onto a CD/DVD or write it to an USB stick. Legacy
+              This image will do an unattended installation of Debian
+              and the selected applications. No network connection is needed, since all packages are on the installation media. You can burn this image onto a CD/DVD or write it to an USB stick. Legacy
 	      BIOS and UEFI are supported.
 	      <br>
 	      <b>All data on the first disk will be overridden without any further confirmation.</b>
