link to cloud and Ubuntu

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -40,9 +40,15 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own cloud image or
-		an <a href="../">installation image</a>
+	      FAI.me. Build your own Debian cloud image
 	    </h5>
+            <h6>
+              <ul class="browser-default">
+                <li><a href="../FAIme">Debian installation ISO</a><p></li>
+                <li><a href="../FAIme-ubuntu">Ubuntu installation ISO</a></li>
+              </ul>
+            </h6>
+
 	    <div class="divider"></div>
 	    <p>
               This FAI.me image is a bootable disk image that can be
