--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,13 +40,19 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own installation ISO or
-		a <a href="cloud">cloud image</a>
+	      FAI.me. Build your own installation ISO for <b>Debian</b>
 	    </h5>
+            <h6>
+              <ul class="browser-default">
+                <li><a href="../FAIme-ubuntu">Ubuntu version</a><p></li>
+                <li><a href="../FAIme/cloud">Cloud images</a></li>
+              </ul>
+            </h6>
+
 	    <div class="divider"></div>
 	    <p>
               This image will do an unattended installation of Debian
-              and the selected applications. No network connection is needed, since all packages are on the installation media. You can burn this image onto a CD/DVD or write it to an USB stick. Legacy
+              and the selected applications. No network connection is needed, since all packages are on the installation media. You can write this image to an USB stick or CD. Legacy
 	      BIOS and UEFI are supported.
 	      <br>
 	      <b>All data on the first disk will be overridden without any further confirmation.</b>
